fix(ci): update release-please workflow with stricter repo validation
- Add conditions to validate the head repository matches the current repository.
- Explicitly specify secrets for RELEASE_PLEASE_APP_ID and RELEASE_PLEASE_APP_PRIVATE_KEY.

fix(test): adjust account meta test to use getFirst()

- Replace `get(0)` with `getFirst()` for improved clarity and correctness.